--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "domain-vocab",
+  "name": "domainvocab",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate",
+    "db:push": "prisma db push",
+    "db:seed": "ts-node prisma/seed.ts"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-dialog": "^1.1.13",
@@ -25,7 +30,6 @@
     "eslint-config-next": "14.1.0",
     "lucide-react": "^0.509.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.11",
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "react": "^18.2.0",
@@ -46,6 +50,7 @@
     "postcss": "^8.4.35",
     "prisma": "^5.10.2",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
